# diplom_project

./: .gitignore  Claude.md  PHASE_1_IMPROVEMENT_PLAN.md  VKR_PLAN.md  docker-compose.yaml
ai_module/: meta.json  model.pkl
code/: .dockerignore  .env.example  Dockerfile  README.md  populate_lessons.py  pyproject.toml  sber.py
code/analytics/: apps.py  models.py  services.py  tests.py  urls.py  views.py
code/analytics/management/commands/: generate_synthetic_data.py  populate_demo_courses.py
code/analytics/migrations/: 0001_initial.py  0002_rename_is_competed_userlessonprogress_is_completed.py  0003_db_indexes.py  0004_ml_fields_and_quiz_attempt.py
code/assistant/: pdf_indexer.py  rag.py  urls.py  vector_store.py  views.py
code/assistant/management/commands/: reindex_courses.py
code/config/: settings.py  urls.py
code/courses/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
code/courses/migrations/: 0001_initial.py  0002_db_indexes.py  0003_add_lesson_pdf_file.py  0004_enrollment_model.py
code/templates/: base.html
code/templates/courses/: course_detail.html  course_form.html  course_list.html  lesson_detail.html
code/templates/registration/: login.html
code/users/: models.py
code/users/migrations/: 0001_initial.py  0002_user_role.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  (+1 more)
ml_analytics/: dataset_builder.py  evaluate.py  test_model_predictions.py  train.py
(+11 files in other folders)
